Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Đồn Công an cửa khẩu Tân Sơn Nhất tìm lại điện thoại, khách viết thư cảm ơn",
+    "content": "Ngày 22-3, Đồn Công an cửa khẩu Cảng hàng không quốc tế Tân Sơn Nhất đã tìm lại được chiếc điện thoại iPhone 16 bị du khách Indonesia, ông Aldo Allasiuxe Lan, để quên tại sân bay. Sau khi trình báo, đơn vị đã nhanh chóng xác minh và phối hợp với Công an tỉnh Đồng Nai để trả lại điện thoại cho ông. Ông Aldo rất vui mừng và đã viết thư cảm ơn gửi đến cán bộ công an vì sự tận tình và hiệu quả trong việc giúp đỡ.",
+    "link": "https://tuoitre.vn/don-cong-an-cua-khau-tan-son-nhat-tim-lai-dien-thoai-khach-viet-thu-cam-on-20250322174841311.htm",
+    "cat": "phap-luat",
+    "positivity": 10,
+    "importance": 7,
+    "question": "Ông Aldo Allasiuxe Lan đã để quên điện thoại ở đâu?",
+    "answers": [
+      {
+        "text": "Nhà vệ sinh sân bay",
+        "correct": true
+      },
+      {
+        "text": "Khách sạn",
+        "correct": false
+      },
+      {
+        "text": "Trên xe taxi",
+        "correct": false
+      },
+      {
+        "text": "Trong khu vực nhà ga",
+        "correct": false
+      },
+      {
+        "text": "Tại quán cà phê gần sân bay",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lộ trình sáp nhập đơn vị hành chính cấp tỉnh trên toàn quốc",
     "content": "Đề án sáp nhập đơn vị hành chính cấp tỉnh, bỏ cấp huyện nhằm tinh gọn bộ máy và nâng cao hiệu quả quản lý sẽ được trình Trung ương trước ngày 1/4 và Quốc hội thông qua trước 30/6. Lộ trình này thể hiện nỗ lực của chính phủ trong việc cải cách hành chính tại Việt Nam.",
     "link": "https://vnexpress.net/lo-trinh-sap-nhap-don-vi-hanh-chinh-cap-tinh-tren-toan-quoc-4864585.html",
@@ -237,32 +268,28 @@
     ]
   },
   {
-    "title": "Ho ra máu cảnh báo bệnh gì?",
-    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
-    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
+    "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
+    "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
+    "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
     "cat": "suc-khoe",
-    "positivity": 4,
+    "positivity": 7,
     "importance": 8,
-    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
+    "question": "Nặn mụn có thể gây ra nguy cơ mắc uốn ván không?",
     "answers": [
       {
-        "text": "Ung thư phổi",
+        "text": "Có, nếu không thực hiện đúng cách.",
         "correct": true
       },
       {
-        "text": "Cảm cúm",
+        "text": "Không, luôn an toàn.",
         "correct": false
       },
       {
-        "text": "Viêm họng",
+        "text": "Chỉ nếu mụn lớn.",
         "correct": false
       },
       {
-        "text": "Cao huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau dạ dày",
+        "text": "Chỉ nếu có vết thương sâu.",
         "correct": false
       }
     ]
@@ -330,28 +357,32 @@
     ]
   },
   {
-    "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
-    "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
-    "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
+    "title": "Ho ra máu cảnh báo bệnh gì?",
+    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
+    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 4,
     "importance": 8,
-    "question": "Nặn mụn có thể gây ra nguy cơ mắc uốn ván không?",
+    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
     "answers": [
       {
-        "text": "Có, nếu không thực hiện đúng cách.",
+        "text": "Ung thư phổi",
         "correct": true
       },
       {
-        "text": "Không, luôn an toàn.",
+        "text": "Cảm cúm",
         "correct": false
       },
       {
-        "text": "Chỉ nếu mụn lớn.",
+        "text": "Viêm họng",
         "correct": false
       },
       {
-        "text": "Chỉ nếu có vết thương sâu.",
+        "text": "Cao huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Đau dạ dày",
         "correct": false
       }
     ]
@@ -2015,33 +2046,6 @@
     ]
   },
   {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -2068,6 +2072,33 @@
       },
       {
         "text": "3 tháng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -4159,37 +4190,6 @@
       },
       {
         "text": "Không thực hiện nghĩa vụ công vụ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thêm 33 điểm gắn camera phạt nguội ở Hải Phòng",
-    "content": "UBND TP Hải Phòng đã lắp đặt thêm 33 điểm camera để xử phạt vi phạm giao thông. Hệ thống này bắt đầu hoạt động từ ngày 19/3 tại 10 nút giao thông và sẽ tiếp tục có 23 vị trí nữa được bàn giao cho công an vào 31/3. Việc lắp đặt camera nhằm nâng cao ý thức tham gia giao thông và giảm tai nạn, ùn tắc, nằm trong dự án nâng cao năng lực quản lý giao thông đô thị thông minh.",
-    "link": "https://vnexpress.net/them-33-diem-gan-camera-phat-nguoi-o-hai-phong-4864206.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có bao nhiêu điểm camera phạt nguội được lắp đặt ở Hải Phòng?",
-    "answers": [
-      {
-        "text": "33 điểm",
-        "correct": true
-      },
-      {
-        "text": "10 điểm",
-        "correct": false
-      },
-      {
-        "text": "5 điểm",
-        "correct": false
-      },
-      {
-        "text": "15 điểm",
-        "correct": false
-      },
-      {
-        "text": "23 điểm",
         "correct": false
       }
     ]
