--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,37 @@
     ]
   },
   {
+    "title": "MC Thảo Vân bị trộm vào nhà lấy 10 chiếc đồng hồ",
+    "content": "MC Thảo Vân vừa trải qua một sự cố không mong muốn khi nhà chị bị trộm đột nhập và lấy đi 10 chiếc đồng hồ cùng một lọ nước hoa. Chị chia sẻ rằng do bất cẩn không khóa cửa, nên tên trộm đã dễ dàng vào nhà trong lúc con trai chị đang ngủ. Thảo Vân nhận ra rằng kẻ gian có thể đã theo dõi nhà mình trong một thời gian dài và đây là bài học lớn cho chị về việc nâng cao an ninh trong gia đình.",
+    "link": "https://dantri.com.vn/giai-tri/mc-thao-van-bi-trom-vao-nha-lay-10-chiec-dong-ho-20250322172948765.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 6,
+    "question": "MC Thảo Vân đã bị mất gì trong vụ trộm vào nhà?",
+    "answers": [
+      {
+        "text": "10 chiếc đồng hồ",
+        "correct": true
+      },
+      {
+        "text": "Một chiếc xe",
+        "correct": false
+      },
+      {
+        "text": "Một máy tính",
+        "correct": false
+      },
+      {
+        "text": "Một chiếc điện thoại",
+        "correct": false
+      },
+      {
+        "text": "Một chiếc nhẫn",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lộ trình sáp nhập đơn vị hành chính cấp tỉnh trên toàn quốc",
     "content": "Đề án sáp nhập đơn vị hành chính cấp tỉnh, bỏ cấp huyện nhằm tinh gọn bộ máy và nâng cao hiệu quả quản lý sẽ được trình Trung ương trước ngày 1/4 và Quốc hội thông qua trước 30/6. Lộ trình này thể hiện nỗ lực của chính phủ trong việc cải cách hành chính tại Việt Nam.",
     "link": "https://vnexpress.net/lo-trinh-sap-nhap-don-vi-hanh-chinh-cap-tinh-tren-toan-quoc-4864585.html",
@@ -2369,6 +2400,33 @@
     ]
   },
   {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -2395,33 +2453,6 @@
       },
       {
         "text": "3 tháng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -3366,32 +3397,28 @@
     ]
   },
   {
-    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
-    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
-    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
     "answers": [
       {
-        "text": "Nấu ăn và khiêu vũ cùng người lạ",
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
         "correct": true
       },
       {
-        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
         "correct": false
       },
       {
-        "text": "Chỉ dành cho những người đã quen biết nhau",
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
         "correct": false
       },
       {
-        "text": "Tổ chức các buổi hội thảo chuyên đề",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người lớn tuổi",
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
@@ -3482,6 +3509,37 @@
     ]
   },
   {
+    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
+    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
+    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
+    "answers": [
+      {
+        "text": "Nấu ăn và khiêu vũ cùng người lạ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người đã quen biết nhau",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức các buổi hội thảo chuyên đề",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người lớn tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
     "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
     "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
@@ -3504,33 +3562,6 @@
       },
       {
         "text": "Vì không có giống lúa tốt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
