Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Quy tắc chi tiêu gia đình trong thời khó khăn",
+    "content": "Trong bối cảnh kinh tế khó khăn, chuyên gia tài chính đề xuất quy tắc chi tiêu 75-15-10 nhằm giúp các gia đình quản lý tài chính hiệu quả hơn. Theo đó, 75% thu nhập nên được dành cho nhu cầu thiết yếu như nhà ở và thực phẩm, 15% cho đầu tư dài hạn, và 10% cho tiết kiệm ngắn hạn. Các chuyên gia khuyến cáo rằng việc lập ngân sách phù hợp và xem xét lại thói quen chi tiêu là rất quan trọng để kiểm soát tài chính cá nhân.",
+    "link": "https://vnexpress.net/quy-tac-chi-tieu-gia-dinh-trong-thoi-kho-khan-vnepre-4864535.html",
+    "cat": "gia-dinh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quy tắc chi tiêu 75-15-10 áp dụng cho những nhu cầu nào?",
+    "answers": [
+      {
+        "text": "Nhu cầu thiết yếu, đầu tư dài hạn và tiết kiệm ngắn hạn.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dành cho tiết kiệm.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cho đầu tư.",
+        "correct": false
+      },
+      {
+        "text": "Dành cho chi tiêu không cần thiết.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đồn Công an cửa khẩu Tân Sơn Nhất tìm lại điện thoại, khách viết thư cảm ơn",
     "content": "Ngày 22-3, Đồn Công an cửa khẩu Cảng hàng không quốc tế Tân Sơn Nhất đã tìm lại được chiếc điện thoại iPhone 16 bị du khách Indonesia, ông Aldo Allasiuxe Lan, để quên tại sân bay. Sau khi trình báo, đơn vị đã nhanh chóng xác minh và phối hợp với Công an tỉnh Đồng Nai để trả lại điện thoại cho ông. Ông Aldo rất vui mừng và đã viết thư cảm ơn gửi đến cán bộ công an vì sự tận tình và hiệu quả trong việc giúp đỡ.",
     "link": "https://tuoitre.vn/don-cong-an-cua-khau-tan-son-nhat-tim-lai-dien-thoai-khach-viet-thu-cam-on-20250322174841311.htm",
@@ -2077,33 +2104,6 @@
     ]
   },
   {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -2130,6 +2130,33 @@
       },
       {
         "text": "3 tháng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -3074,60 +3101,6 @@
     ]
   },
   {
-    "title": "Đo mật độ xương bằng AI trong 30s",
-    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
-    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
-    "answers": [
-      {
-        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
-        "correct": true
-      },
-      {
-        "text": "Giúp bác sĩ làm việc ít hơn.",
-        "correct": false
-      },
-      {
-        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
-        "correct": false
-      },
-      {
-        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
-    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
-    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
-    "answers": [
-      {
-        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
-        "correct": true
-      },
-      {
-        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
-        "correct": false
-      },
-      {
-        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
-        "correct": false
-      },
-      {
-        "text": "Vì chỉ những người tài năng mới thành công.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
     "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
     "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
@@ -3190,6 +3163,33 @@
     ]
   },
   {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
     "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
     "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
@@ -3217,28 +3217,55 @@
     ]
   },
   {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "title": "Đo mật độ xương bằng AI trong 30s",
+    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
+    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
     "answers": [
       {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
         "correct": true
       },
       {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "text": "Giúp bác sĩ làm việc ít hơn.",
         "correct": false
       },
       {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
         "correct": false
       },
       {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
+        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
+    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
+    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
+    "answers": [
+      {
+        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
+        "correct": true
+      },
+      {
+        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
+        "correct": false
+      },
+      {
+        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
+        "correct": false
+      },
+      {
+        "text": "Vì chỉ những người tài năng mới thành công.",
         "correct": false
       }
     ]
@@ -4055,60 +4082,6 @@
       },
       {
         "text": "8 người",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bệnh khí phế thũng",
-    "content": "Bệnh khí phế thũng là tình trạng phá hủy các túi khí trong phổi, dẫn đến khó thở và giảm khả năng thực hiện các hoạt động hàng ngày. Nguyên nhân chính của bệnh là do hút thuốc lá, ngoài ra còn có các yếu tố như ô nhiễm không khí và rối loạn di truyền. Bệnh có thể tiến triển nặng nếu không được phát hiện và điều trị kịp thời, gây ra nhiều biến chứng nghiêm trọng như suy hô hấp và ung thư phổi. Phương pháp điều trị chủ yếu là bỏ thuốc lá và sử dụng thuốc theo chỉ định của bác sĩ.",
-    "link": "https://vnexpress.net/benh-khi-phe-thung-4864288.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Khí phế thũng là bệnh liên quan đến tình trạng gì trong phổi?",
-    "answers": [
-      {
-        "text": "Phá hủy các túi khí trong phổi",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường chức năng phổi",
-        "correct": false
-      },
-      {
-        "text": "Làm giảm cân nặng",
-        "correct": false
-      },
-      {
-        "text": "Gây ho không có đờm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "CLB Nhật Bản trừ lương lãnh đạo vì thua đại diện Singapore",
-    "content": "CLB Sanfrecce Hiroshima của Nhật Bản đã quyết định trừ lương ba lãnh đạo do sai sót trong việc đăng ký cầu thủ, dẫn đến việc đội bóng bị loại khỏi tứ kết AFC Champions League Two 2024-2025. Chủ tịch Masayoshi Kubo bị trừ 10% lương trong hai tháng, nhưng ông tự nguyện chịu phạt trong sáu tháng. Hai lãnh đạo bộ phận tuyển trạch cũng bị trừ lương do không kiểm tra kỹ tình trạng treo giò của cầu thủ Valere Germain.",
-    "link": "https://vnexpress.net/clb-nhat-ban-tru-luong-lanh-dao-vi-thua-dai-dien-singapore-4864369.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao CLB Sanfrecce Hiroshima trừ lương lãnh đạo?",
-    "answers": [
-      {
-        "text": "Vì sai sót trong đăng ký cầu thủ",
-        "correct": true
-      },
-      {
-        "text": "Vì thua trận",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ ngân sách",
-        "correct": false
-      },
-      {
-        "text": "Vì vi phạm nội quy giải đấu",
         "correct": false
       }
     ]
