Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Bảng của Chelsea tại FIFA Club World Cup bị xáo trộn",
+    "content": "Chelsea đã bị xáo trộn bảng đấu tại FIFA Club World Cup 2025 khi Club Leon, đội bóng Mexico, bị FIFA loại do vi phạm quy định sở hữu nhiều đội bóng. Leon nằm ở bảng D cùng với Chelsea, Flamengo và Esperance de Tunis. Mặc dù Pachuca, đội khác của Mexico, vẫn được thi đấu, Leon đã tuyên bố sẽ xem xét các hành động pháp lý nhằm chống lại quyết định này.",
+    "link": "https://vnexpress.net/bang-cua-chelsea-tai-fifa-club-world-cup-bi-xao-tron-4864612.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Club Leon bị loại khỏi FIFA Club World Cup 2025?",
+    "answers": [
+      {
+        "text": "Vì vi phạm quy định sở hữu nhiều đội bóng",
+        "correct": true
+      },
+      {
+        "text": "Do không đủ tiêu chí về thành tích",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ tài chính để tham gia",
+        "correct": false
+      },
+      {
+        "text": "Do quyết định của huấn luyện viên",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Quy tắc chi tiêu gia đình trong thời khó khăn",
     "content": "Trong bối cảnh kinh tế khó khăn, chuyên gia tài chính đề xuất quy tắc chi tiêu 75-15-10 nhằm giúp các gia đình quản lý tài chính hiệu quả hơn. Theo đó, 75% thu nhập nên được dành cho nhu cầu thiết yếu như nhà ở và thực phẩm, 15% cho đầu tư dài hạn, và 10% cho tiết kiệm ngắn hạn. Các chuyên gia khuyến cáo rằng việc lập ngân sách phù hợp và xem xét lại thói quen chi tiêu là rất quan trọng để kiểm soát tài chính cá nhân.",
     "link": "https://vnexpress.net/quy-tac-chi-tieu-gia-dinh-trong-thoi-kho-khan-vnepre-4864535.html",
@@ -3424,6 +3451,60 @@
     ]
   },
   {
+    "title": "Đo mật độ xương bằng AI trong 30s",
+    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
+    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
+    "answers": [
+      {
+        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
+        "correct": true
+      },
+      {
+        "text": "Giúp bác sĩ làm việc ít hơn.",
+        "correct": false
+      },
+      {
+        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
+        "correct": false
+      },
+      {
+        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
+    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
+    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
+    "answers": [
+      {
+        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
+        "correct": true
+      },
+      {
+        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
+        "correct": false
+      },
+      {
+        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
+        "correct": false
+      },
+      {
+        "text": "Vì chỉ những người tài năng mới thành công.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
     "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
     "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
@@ -3486,33 +3567,6 @@
     ]
   },
   {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
     "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
     "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
@@ -3540,55 +3594,28 @@
     ]
   },
   {
-    "title": "Đo mật độ xương bằng AI trong 30s",
-    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
-    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
     "answers": [
       {
-        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
         "correct": true
       },
       {
-        "text": "Giúp bác sĩ làm việc ít hơn.",
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
         "correct": false
       },
       {
-        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
         "correct": false
       },
       {
-        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
-    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
-    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
-    "answers": [
-      {
-        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
-        "correct": true
-      },
-      {
-        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
-        "correct": false
-      },
-      {
-        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
-        "correct": false
-      },
-      {
-        "text": "Vì chỉ những người tài năng mới thành công.",
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
