--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Tiền đạo Ngoại hạng Anh bị phạt thẻ vì ký tặng CĐV giữa trận",
+    "content": "Tiền đạo Chris Wood của đội tuyển New Zealand và câu lạc bộ Nottingham Forest đã nhận thẻ vàng trong trận đấu vòng loại World Cup 2026 khi anh lên khán đài ký tặng và chụp ảnh với người hâm mộ. Mặc dù lập hat-trick trong trận New Zealand thắng Fiji 7-0, Wood vẫn bị phạt vì vi phạm quy định của FIFA cấm cầu thủ lên khán đài giữa trận. Anh cho biết mình chỉ muốn làm điều tốt đẹp cho người hâm mộ và sẽ chuẩn bị cho trận chung kết với New Caledonia vào ngày 24/3.",
+    "link": "https://vnexpress.net/tien-dao-ngoai-hang-anh-bi-phat-the-vi-ky-tang-cdv-giua-tran-4864616.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Tại sao Chris Wood bị phạt thẻ vàng trong trận đấu với Fiji?",
+    "answers": [
+      {
+        "text": "Vì anh ký tặng và chụp ảnh với CĐV giữa trận.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh không ghi bàn.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh chơi không tốt.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh phạm lỗi với trọng tài.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bảng của Chelsea tại FIFA Club World Cup bị xáo trộn",
     "content": "Chelsea đã bị xáo trộn bảng đấu tại FIFA Club World Cup 2025 khi Club Leon, đội bóng Mexico, bị FIFA loại do vi phạm quy định sở hữu nhiều đội bóng. Leon nằm ở bảng D cùng với Chelsea, Flamengo và Esperance de Tunis. Mặc dù Pachuca, đội khác của Mexico, vẫn được thi đấu, Leon đã tuyên bố sẽ xem xét các hành động pháp lý nhằm chống lại quyết định này.",
     "link": "https://vnexpress.net/bang-cua-chelsea-tai-fifa-club-world-cup-bi-xao-tron-4864612.html",
