--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Hơn một nửa CLB Ngoại hạng Anh có thể dự Cup châu Âu",
+    "content": "Giải Ngoại hạng Anh có thể có hơn một nửa các câu lạc bộ tham dự các giải đấu châu Âu mùa tới, với 11 trong tổng số 20 đội đủ điều kiện. Hiện tại, năm đội Anh đã vào đến tứ kết các giải châu Âu. Nếu các đội này giành chiến thắng ở các giải đấu của mình, họ sẽ tự động có suất tham dự Cup châu Âu bất kể vị trí trong giải quốc nội. Tuy nhiên, kịch bản này có khả năng xảy ra không cao do nhiều yếu tố trong các trận đấu sắp tới.",
+    "link": "https://vnexpress.net/hon-mot-nua-clb-ngoai-hang-anh-co-the-du-cup-chau-au-4864483.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Có bao nhiêu đội bóng Ngoại hạng Anh có khả năng dự Cup châu Âu mùa tới?",
+    "answers": [
+      {
+        "text": "11 đội",
+        "correct": true
+      },
+      {
+        "text": "10 đội",
+        "correct": false
+      },
+      {
+        "text": "8 đội",
+        "correct": false
+      },
+      {
+        "text": "5 đội",
+        "correct": false
+      },
+      {
+        "text": "6 đội",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tranh cãi việc VĐV chuyển giới thắng áp đảo cự ly 400m nữ",
     "content": "VĐV chuyển giới Aayden \"Ada\" Gallagher đã gây tranh cãi khi giành chiến thắng áp đảo ở cả hai cự ly 200m và 400m nữ tại giải điền kinh liên trường Portland. Gallagher đã lập kỷ lục mùa giải với thời gian 57 giây 62 giây cho cự ly 400m, bỏ xa đối thủ về nhì gần 10 giây. Sự kiện này đã kích thích phản ứng mạnh mẽ từ dư luận, bao gồm cả những lời chỉ trích từ cựu VĐV bơi lội Riley Gaines, người đã lên tiếng về sự không công bằng khi VĐV chuyển giới tham gia thi đấu ở nội dung nữ.",
     "link": "https://vnexpress.net/tranh-cai-viec-vdv-chuyen-gioi-thang-ap-dao-cu-ly-400m-nu-4864631.html",
@@ -547,6 +578,33 @@
       },
       {
         "text": "Do quyết định của huấn luyện viên",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hoa hậu Đỗ Mỹ Linh: Từ MC thể thao VTV đến Phó Chủ tịch công ty nhà chồng",
+    "content": "Hoa hậu Đỗ Mỹ Linh, người từng là MC thể thao tại VTV, đã có một hành trình đáng chú ý khi chuyển mình từ showbiz sang lĩnh vực kinh doanh sau khi kết hôn với doanh nhân Đỗ Vinh Quang. Cô hiện là Phó Chủ tịch của một công ty thuộc tập đoàn gia đình chồng và tích cực tham gia vào các hoạt động kinh doanh. Đỗ Mỹ Linh không chỉ giữ được sự nghiệp mà còn cân bằng cuộc sống gia đình, thể hiện bản lĩnh và sự linh hoạt của một người phụ nữ hiện đại.",
+    "link": "https://dantri.com.vn/giai-tri/hoa-hau-do-my-linh-tu-mc-the-thao-vtv-den-pho-chu-tich-cong-ty-nha-chong-20250322111711502.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Đỗ Mỹ Linh đã từ bỏ công việc nào để trở thành Phó Chủ tịch công ty nhà chồng?",
+    "answers": [
+      {
+        "text": "MC thể thao tại VTV",
+        "correct": true
+      },
+      {
+        "text": "Diễn viên điện ảnh",
+        "correct": false
+      },
+      {
+        "text": "Người mẫu thời trang",
+        "correct": false
+      },
+      {
+        "text": "Người dẫn chương trình truyền hình",
         "correct": false
       }
     ]
@@ -1542,6 +1600,33 @@
     ]
   },
   {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -1568,33 +1653,6 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
@@ -3505,37 +3563,6 @@
     ]
   },
   {
-    "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
-    "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
-    "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Triệu Lệ Dĩnh quyết định trở nên xấu xí trong vai diễn mới?",
-    "answers": [
-      {
-        "text": "Để thử thách bản thân và khẳng định diễn xuất.",
-        "correct": true
-      },
-      {
-        "text": "Để thu hút sự chú ý của khán giả.",
-        "correct": false
-      },
-      {
-        "text": "Để đổi mới phong cách cá nhân.",
-        "correct": false
-      },
-      {
-        "text": "Để hợp tác cùng với đạo diễn nổi tiếng.",
-        "correct": false
-      },
-      {
-        "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đo mật độ xương bằng AI trong 30s",
     "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
     "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
@@ -3563,33 +3590,6 @@
     ]
   },
   {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
     "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
     "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
@@ -3612,6 +3612,37 @@
       },
       {
         "text": "Vì chỉ những người tài năng mới thành công.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
+    "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
+    "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Triệu Lệ Dĩnh quyết định trở nên xấu xí trong vai diễn mới?",
+    "answers": [
+      {
+        "text": "Để thử thách bản thân và khẳng định diễn xuất.",
+        "correct": true
+      },
+      {
+        "text": "Để thu hút sự chú ý của khán giả.",
+        "correct": false
+      },
+      {
+        "text": "Để đổi mới phong cách cá nhân.",
+        "correct": false
+      },
+      {
+        "text": "Để hợp tác cùng với đạo diễn nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
         "correct": false
       }
     ]
@@ -3675,6 +3706,33 @@
     ]
   },
   {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Huyền thoại Tour de France gây thất vọng ở lần đầu chạy half marathon",
     "content": "Mark Cavendish, huyền thoại của Tour de France, đã gây thất vọng khi chỉ đạt thành tích 1 giờ 57 phút 8 giây trong lần đầu tham gia Paris Half Marathon 2025. Mặc dù đây là một thời gian đáng nể cho nhiều vận động viên nghiệp dư, nhưng nhiều người đã chỉ trích anh vì không đạt được thành tích tốt hơn, đặc biệt là khi so sánh với các cựu cua-rơ khác như Thomas Voeckler. Trong khi một số người bảo vệ Cavendish vì đã dám thử sức với môn thể thao mới, những lời chỉ trích vẫn chiếm ưu thế, cho thấy kỳ vọng cao dành cho một vận động viên nổi tiếng như anh.",
     "link": "https://vnexpress.net/huyen-thoai-tour-de-france-gay-that-vong-o-lan-dau-chay-half-marathon-4864354.html",
@@ -3706,33 +3764,6 @@
     ]
   },
   {
-    "title": "Malaysia bổ sung 3 cầu thủ nhập tịch",
-    "content": "Malaysia đã bổ sung ba cầu thủ nhập tịch vào đội tuyển bóng đá quốc gia nhằm chuẩn bị cho vòng loại cuối Asian Cup 2027. Ba cầu thủ này bao gồm tiền vệ Hector Hevel, hậu vệ Gabriel Palmero và thủ môn Christian Abad Amat, tất cả đều có nguồn gốc từ Tây Ban Nha. HLV Peter Cklamovski cho biết sự bổ sung này sẽ nâng cao sức cạnh tranh trong đội hình và góp phần cải thiện phong độ chung của đội tuyển.",
-    "link": "https://vnexpress.net/malaysia-bo-sung-3-cau-thu-nhap-tich-4864311.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Ai là ba cầu thủ nhập tịch vừa được bổ sung vào đội tuyển Malaysia?",
-    "answers": [
-      {
-        "text": "Hector Hevel, Gabriel Palmero, Christian Abad Amat",
-        "correct": true
-      },
-      {
-        "text": "Lionel Messi, Cristiano Ronaldo, Neymar",
-        "correct": false
-      },
-      {
-        "text": "David Beckham, Zinedine Zidane, Ronaldinho",
-        "correct": false
-      },
-      {
-        "text": "Thiago Silva, Sergio Ramos, Manuel Neuer",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cơn ác mộng khi uống những liều thuốc trầm cảm đầu tiên",
     "content": "Sau khi uống thuốc chống trầm cảm lần đầu, Nam, 34 tuổi, trải qua cảm giác khó thở và lo lắng cực độ, nghi ngờ về sự an toàn của thuốc. Tình trạng này không phải là cá biệt, nhiều bệnh nhân khác cũng gặp phải triệu chứng tương tự, dẫn đến việc tự ý ngừng thuốc. Theo các chuyên gia, hội chứng serotonin có thể xảy ra ở những người nhạy cảm, và việc không kiên nhẫn trong điều trị có thể làm tình trạng bệnh trở nên nghiêm trọng hơn. Để điều trị hiệu quả, bệnh nhân cần tuân thủ hướng dẫn của bác sĩ và hiểu rõ các triệu chứng có thể xảy ra.",
     "link": "https://vnexpress.net/con-ac-mong-khi-uong-nhung-lieu-thuoc-tram-cam-dau-tien-4863109.html",
@@ -3755,6 +3786,33 @@
       },
       {
         "text": "Vì họ không có tiền để tiếp tục dùng thuốc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Malaysia bổ sung 3 cầu thủ nhập tịch",
+    "content": "Malaysia đã bổ sung ba cầu thủ nhập tịch vào đội tuyển bóng đá quốc gia nhằm chuẩn bị cho vòng loại cuối Asian Cup 2027. Ba cầu thủ này bao gồm tiền vệ Hector Hevel, hậu vệ Gabriel Palmero và thủ môn Christian Abad Amat, tất cả đều có nguồn gốc từ Tây Ban Nha. HLV Peter Cklamovski cho biết sự bổ sung này sẽ nâng cao sức cạnh tranh trong đội hình và góp phần cải thiện phong độ chung của đội tuyển.",
+    "link": "https://vnexpress.net/malaysia-bo-sung-3-cau-thu-nhap-tich-4864311.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Ai là ba cầu thủ nhập tịch vừa được bổ sung vào đội tuyển Malaysia?",
+    "answers": [
+      {
+        "text": "Hector Hevel, Gabriel Palmero, Christian Abad Amat",
+        "correct": true
+      },
+      {
+        "text": "Lionel Messi, Cristiano Ronaldo, Neymar",
+        "correct": false
+      },
+      {
+        "text": "David Beckham, Zinedine Zidane, Ronaldinho",
+        "correct": false
+      },
+      {
+        "text": "Thiago Silva, Sergio Ramos, Manuel Neuer",
         "correct": false
       }
     ]
